creusot/tests/should_fail/duplicate_specs.stderr
error: expected parentheses
 --> duplicate_specs.rs:7:11
  |
7 |     fn std::vec::Vec::new<T>() -> Vec<T>
  |           ^

error: expected identifier
  --> duplicate_specs.rs:15:8
   |
15 |     fn crate::omg() -> ()
   |        ^^^^^

error: expected identifier
  --> duplicate_specs.rs:23:12
   |
23 |         fn crate::omg() -> ()
   |            ^^^^^

error: aborting due to 3 previous errors

